--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <title>CatPhotoApp</title>
   </head>
-  <body>
+  <body bgcolor="pink">
     <main>
       <h1>CatPhotoApp</h1>
       <section>
@@ -58,7 +58,7 @@
     </main>
     <footer>
       <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+        No Copyright - <a href="https://www.saran.org">saran</a>
       </p>
     </footer>
   </body>
